latest (2520 rev.)

+ Added: option: castle: allow recruits special/expansion heroes
+ Update: battle: Army::Dialog: added spell duration info
+ Update: QuickDialog for hero, disable show level for enemy hero
+ Fixed: hotseat: view AI move for all local players, unions: fixed maps view
+ Fixed: game: crash select maps, remove old save format support
+ Fixed: maps: RemoveJail, top cell object
+ Fixed: castle: neutral army present
+ Fixed: game: update QuickDialog view Castle::Army or Heroes::Army with Scoute Skill
+ Fixed: game: Game::CountScoute, add round values
+ Fixed: heroes: Heroes::GetFreeman, Heroes::isFreeman
+ Fixed: world: World::CheckKingdomLoss: for accumulate gold conditions
+ Fixed: ai: AI profiling,  Castle::RecruitAllMonster

Aug, 31, 2011 (2490 rev.)

+ Added: option: Artesian Springs have two separately visitable squares (h3 ver)"
+ Added: option: Higher Mage Guilds Regenerate More Spell Points/turn
+ Added: engine: external sprite load for tiles (xml)
+ Update: pot file
+ Update: heroes: add shipmaster marker to icons
+ Update: heroes: quick info: show luck/morale
+ Update: heroes: quick info: show level
+ Update: alternative fonts
+ Fixed: savefile: can not landing from boat to coast
+ Fixed: update objects WaterMill/WindMill/MagicGarde with hero present
+ Fixed: Heroes::ActionHeroes, Heroes::ActionCastle
+ Fixed: Weeks/Months Of messages and next_week
+ Fixed: shipwrek access from boat
+ Fixed: heroes: resource Artifacts income bonus
+ Fixed: heroes: cast spell TownGate/Portal on water
+ Fixed: Heroes::ActionToSkeleton, fixed Heroes::SetVisitedWideTile
+ Fixed: heroes: visit status for ActionToPoorLuckObject - Pyramid, fixed: ActionToSkeleton visited
+ Fixed: world: MP2::IsWaterObject add LoyaltyVersion check
+ Fixed: world: teleport check on water status (LoyaltyVersion)
+ Fixed: heroes: ActionToCoast
+ Fixed: unions: disable battle
+ Fixed: world: teleport with battle crash, fixed default action key + check move point